フッターの追加

--- a/templates/cancel.html
+++ b/templates/cancel.html
@@ -24,6 +24,12 @@
         <a href="{{ url_for('index') }}">ホームに戻る</a>
     </main>
 
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 AITOTO. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
