--- a/templates/success.html
+++ b/templates/success.html
@@ -20,13 +20,20 @@
     </header>
 
     <main class="container">
-        <h2>ご購入ありがとうございます</h2>
+        <h1>ご購入ありがとうございます</h>
+        <h3>以下のフォームへご回答お願いします<br>メールアドレスは正しく入力してください</h3>
         <form method="post" action="/send">
             <input type="text" name="name" placeholder="Name">
             <input type="email" name="email" placeholder="Email">
             <input type="submit" value="Send">
         </form>
     </main>
+    
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 AITOTO. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
