--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -51,9 +51,9 @@
                         <img src="{{ data[0].image }}" class="preview" id="product-image">
                     </div>
                     <div class="content">
-                        <h2 id="product-name">{{ data[0].商品名 }}</h2>
+                        <h2 id="product-name">{{ data[0].product_name }}</h2>
                         <div class="description">
-                            <a href="{{ data[0].リンク }}" class="ui orange large button" target="_blank" id="product-link">購入はこちらから</a>
+                            <a href="{{ data[0].link }}" class="ui orange large button" target="_blank" id="product-link">購入はこちらから</a>
                         </div>
                         <div class="button_flex">
                             <button id="submit-button" class="ui fluid large teal submit button"
@@ -81,8 +81,8 @@
                 currentIndex += 1;
                 $.getJSON('/get_item/' + currentIndex, function(data) {
                     $('#product-image').attr('src', data.image);
-                    $('#product-name').text(data.商品名);
-                    $('#product-link').attr('href', data.リンク);
+                    $('#product-name').text(data.product_name);
+                    $('#product-link').attr('href', data.link);
                 });
             });
         });
