--- a/templates/question.html
+++ b/templates/question.html
@@ -5,40 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/static/css/style-question.css">
-    <link rel="stylesheet" href="/static/css/style-common.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-question.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-common.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
-    <script src="/static/javascript/hamburger.js"></script>
+    <script src="{{ url_for('static', filename='javascript/hamburger.js') }}"></script>
     <title>プレゼントアンケート</title>
 </head>
 
 <body>
     <header>
         <div class="ui secondary menu stackable header-sticky">
-            <a href="/" class="logo">
-                <img src="../static/images/logo.png">
+            <a href="{{ url_for('index') }}" class="logo">
+                <img src="{{ url_for('static', filename='images/logo.png') }}">
             </a>
             {% if current_user.is_authenticated %}
-                <a class="item" href="/">トップページ</a>
-                <a class="item" href="/preview_page">プレゼント登録</a>
-                <a class="item" href="/list">マイリスト</a>
+                <a class="item" href="{{ url_for('index') }}">トップページ</a>
+                <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
+                <a class="item" href="{{ url_for('list') }}">マイリスト</a>
                 <div class="right menu">
-                    <a class="ui item" href="/logout">ログアウト</a>
+                    <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
                 </div>
             {% else %}
                 <div class="right menu">
-                    <a class="ui item" href="/register">新規会員登録</a>
-                    <a class="ui item" href="/login">ログイン</a>
+                    <a class="ui item" href="{{ url_for('register') }}">新規会員登録</a>
+                    <a class="ui item" href="{{ url_for('login') }}">ログイン</a>
                 </div>
             {% endif %}
             <div class="hamburger">
                 <i id="hamburger-toggle" class="icon bars"></i>
             </div>
         </div>
-        
     </header>
     
     <main>
