--- a/templates/register.html
+++ b/templates/register.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/style-register.css">
-    <link rel="stylesheet" href="static/css/style-common.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-register.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style-common.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
-    <script src="/static/javascript/hamburger.js"></script>
-    <title>SIGNUP</title>
+    <script src="{{ url_for('static', filename='javascript/hamburger.js') }}"></script>
+
+    <title>新規会員登録</title>
 </head>
 
 <body class="body-bg">
     <header>
         <div class="ui secondary menu stackable header-sticky">
-            <a href="/" class="logo">
-                <img src="../static/images/logo.png">
+            <a href="{{ url_for('index') }}" class="logo">
+                <img src="{{ url_for('static', filename='images/logo.png') }}">
             </a>
             {% if current_user.is_authenticated %}
-            <a class="item" href="/">トップページ</a>
-            <a class="item" href="/preview_page">プレゼント登録</a>
-            <a class="item" href="/list">マイリスト</a>
+            <a class="item" href="{{ url_for('index') }}">トップページ</a>
+            <a class="item" href="{{ url_for('preview_page') }}">プレゼント登録</a>
+            <a class="item" href="{{ url_for('list') }}">マイリスト</a>
             <div class="right menu">
-                <a class="ui item" href="/logout">ログアウト</a>
+                <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
             </div>
             {% else %}
             <div class="right menu">
-                <a class="ui item" href="/register">新規会員登録</a>
-                <a class="ui item" href="/login">ログイン</a>
+                <a class="ui item" href="{{ url_for('register') }}">新規会員登録</a>
+                <a class="ui item" href="{{ url_for('login') }}">ログイン</a>
             </div>
             {% endif %}
             <div class="hamburger">
@@ -85,7 +86,7 @@
                     <button class="ui fluid large teal submit button" type="submit">登録</button>
                 </div>
             </form>
-            <h4>既にアカウントがある場合は<a href="/login">こちらからログイン</a></h4>
+            <h4>既にアカウントがある場合は<a href="{{ url_for('login') }}">こちらからログイン</a></h4>
         </div>
     </div>
     <footer class="footer">
