--- a/templates/preview.html
+++ b/templates/preview.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-common.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
     <script src="{{ url_for('static', filename='javascript/hamburger.js') }}"></script>
     <title>プレゼント登録</title>
@@ -22,17 +23,17 @@
                 <img src="{{ url_for('static', filename='images/logo.png') }}">
             </a>
             {% if current_user.is_authenticated %}
-                <a class="item" href="{{ url_for('index') }}">トップページ</a>
-                <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-                <a class="item" href="{{ url_for('list') }}">マイリスト</a>
-                <div class="right menu">
-                    <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
-                </div>
+            <a class="item" href="{{ url_for('index') }}">トップページ</a>
+            <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
+            <a class="item" href="{{ url_for('list') }}">マイリスト</a>
+            <div class="right menu">
+                <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
+            </div>
             {% else %}
-                <div class="right menu">
-                    <a class="ui item" href="{{ url_for('register') }}">新規会員登録</a>
-                    <a class="ui item" href="{{ url_for('login') }}">ログイン</a>
-                </div>
+            <div class="right menu">
+                <a class="ui item" href="{{ url_for('register') }}">新規会員登録</a>
+                <a class="ui item" href="{{ url_for('login') }}">ログイン</a>
+            </div>
             {% endif %}
             <div class="hamburger">
                 <i id="hamburger-toggle" class="icon bars"></i>
@@ -43,12 +44,12 @@
     <main>
         <div class="container">
 
-            <form method="POST" enctype="multipart/form-data">
+            <form id="registrationForm" method="POST" enctype="multipart/form-data">
+                <!-- ロード画面 -->
+                <div id="loader" class="ui loading form" style="display: none;"></div>
                 <div class="preview-flex">
                     <div class="left">
                         <div class="image">
-                            <script class="jsbin"
-                                src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
                             <div class="file-upload">
                                 <!-- <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button> -->
                                 <button class="file-upload-btn" type="button"
@@ -96,6 +97,7 @@
                 </div>
 
             </form>
+
         </div>
     </main>
 
@@ -130,7 +132,7 @@
 
                 }
                 else {
-                removeUpload();
+                    removeUpload();
                 }
             });
         };
@@ -167,6 +169,13 @@
         $('.image-upload-wrap').bind('dragleave', function () {
             $('.image-upload-wrap').removeClass('image-dropping');
         });
+
+
+        document.getElementById('registrationForm').addEventListener('submit', function () {
+            // フォームが送信されたらローダーを表示
+            document.getElementById('loader').style.display = 'block';
+        });
+
     </script>
 </body>
 
