--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-common.css') }}">
@@ -27,7 +28,7 @@
             {% if current_user.is_authenticated %}
                 <a class="item" href="{{ url_for('index') }}">トップページ</a>
                 <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-                <a class="item" href="{{ url_for('list') }}">マイリスト</a>
+                <a class="item" href="{{ url_for('list', success=success) }}">マイリスト</a>
                 <div class="right menu">
                     <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
                 </div>
@@ -50,7 +51,7 @@
                 <div class="button">
                     {% if current_user.is_authenticated %}
                     <button class="ui button green big"><a href="{{ url_for('preview') }}">プレゼント登録</a></button>
-                    <button class="ui button yellow big"><a href="{{ url_for('list') }}">マイリスト</a></button>
+                    <button class="ui button yellow big"><a href="{{ url_for('list', success=success) }}">マイリスト</a></button>
                     {% else %}
                         <button class="ui button green big"><a href="{{ url_for('register') }}">新規会員登録</a></button>
                         <button class="ui button yellow big"><a href="{{ url_for('login') }}">ログイン</a></button>
