--- a/templates/list.html
+++ b/templates/list.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-list.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style-common.css') }}">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
     <script src="{{ url_for('static', filename='javascript/hamburger.js') }}"></script>
@@ -23,7 +23,7 @@
             {% if current_user.is_authenticated %}
             <a class="item" href="{{ url_for('index') }}">トップページ</a>
             <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-            <a class="item" href="{{ url_for('list') }}">マイリスト</a>
+            <a class="item" href="{{ url_for('list', success=success) }}">マイリスト</a>
             <div class="right menu">
                 <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
             </div>
@@ -53,13 +53,13 @@
                 {% for post in posts %}
                 <div class="card">
                     <div class="content">
-                        <div class="header"><a href="{{ url_for('edit', id=post.id) }}">{{ post.title }}</a></div>
+                        <div class="header"><a href="{{ url_for('edit', id=post.id, success=success) }}">{{ post.title }}</a></div>
                         <div class="meta"><span><i class="calendar icon"></i> {{ post.date.strftime('%Y-%m-%d %H:%M')
                                 }}</span></div>
                         <div class="memo">
                             <p>{{ post.note }}</p>
                         </div>
-                        <div class="image"><a href="{{ url_for('edit', id=post.id) }}"><img
+                        <div class="image"><a href="{{ url_for('edit', id=post.id, success=success) }}"><img
                                     src="{{ url_for('static', filename='up/' + post.file_path) }}"></a></div>
                     </div>
                     <div class="extra content">
@@ -67,8 +67,9 @@
                             <a href="{{ url_for('submit_survey') }}"><i class="gift icon"></i>おすすめ返礼品</a>
                         </span>
                         <span>
-                            <a href="{{ url_for('edit', id=post.id) }}"><i class="edit icon"></i>編集</a>
+                            <a href="{{ url_for('edit', id=post.id, success=success) }}"><i class="edit icon"></i>編集</a>
                         </span>
+                        
                     </div>
                 </div>
                 {% endfor %}
