--- a/templates/edit.html
+++ b/templates/edit.html
@@ -24,7 +24,7 @@
         {% if current_user.is_authenticated %}
         <a class="item" href="{{ url_for('index') }}">トップページ</a>
         <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-        <a class="item" href="{{ url_for('list', success=success_param) }}">マイリスト</a>
+        <a class="item" href="{{ url_for('list', success=success) }}">マイリスト</a>
         <div class="right menu">
             <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
         </div>
@@ -78,9 +78,8 @@
                                     onclick="return confirm('本当に削除してもよろしいですか？')">削除</a>
 
                             </div>
-                            <div class="button_back"><a href="{{ url_for('list', success=success_param) }}"
-                                    class="ui button large submit button">戻る</a>
-                            </div>
+                            <div class="button_back"><a href="{{ url_for('list', success=success) }}"
+                                    class="ui button large submit button">戻る</a></div>
                         </div>
                     </div>
                 </form>
