--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -14,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
     <script src="{{ url_for('static', filename='javascript/hamburger.js') }}"></script>
-    <title>Edit Page</title>
+    <title>おすすめプレゼント</title>
 </head>
 <header>
     <div class="ui secondary menu stackable header-sticky">
@@ -24,7 +24,7 @@
         {% if current_user.is_authenticated %}
         <a class="item" href="{{ url_for('index') }}">トップページ</a>
         <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-        <a class="item" href="{{ url_for('list') }}">マイリスト</a>
+        <a class="item" href="{{ url_for('list', success=success) }}">マイリスト</a>
         <div class="right menu">
             <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
         </div>
