--- a/templates/preview.html
+++ b/templates/preview.html
@@ -25,7 +25,7 @@
             {% if current_user.is_authenticated %}
             <a class="item" href="{{ url_for('index') }}">トップページ</a>
             <a class="item" href="{{ url_for('preview') }}">プレゼント登録</a>
-            <a class="item" href="{{ url_for('list') }}">マイリスト</a>
+            <a class="item" href="{{ url_for('list', success=success) }}">マイリスト</a>
             <div class="right menu">
                 <a class="ui item" href="{{ url_for('logout') }}">ログアウト</a>
             </div>
