性別その他を削除

--- a/templates/register.html
+++ b/templates/register.html
@@ -108,15 +108,15 @@
         function changeColor(color) {
             var male = document.getElementById('male');
             var female = document.getElementById('female');
-            var other = document.getElementById('other');
+            // var other = document.getElementById('other');
 
             // 初期化
             male.style.backgroundColor = '';
             male.style.color = '#4433ff';
             female.style.backgroundColor = '';
             female.style.color = '#ff0a78';
-            other.style.backgroundColor = '';
-            other.style.color = '#495057';
+            // other.style.backgroundColor = '';
+            // other.style.color = '#495057';
 
             // 色を設定
             if (color === 'blue') {
