--- a/templates/question.html
+++ b/templates/question.html
@@ -64,11 +64,12 @@
                         <button type="button" id="female" class="css-button-sliding-to-left--rose" name="genderFemale"
                             value="female">女性</button>
                     </label>
-                    <!-- <label class="gender-button" onclick="changeColor('gray')">
+                    <label class="gender-button" onclick="changeColor('gray')">
                         <input type="hidden" id="otherHidden" name="genderOther" value="">
+                        <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
                         <button type="button" id="other" class="css-button-sliding-to-left--grey" name="genderOther"
                             value="other">その他</button>
-                    </label> -->
+                    </label>
                 </div>
     
     
@@ -138,15 +139,15 @@
         function changeColor(color) {
             var male = document.getElementById('male');
             var female = document.getElementById('female');
-            // var other = document.getElementById('other');
+            var other = document.getElementById('other');
 
             // 初期化
             male.style.backgroundColor = '';
             male.style.color = '#4433ff';
             female.style.backgroundColor = '';
             female.style.color = '#ff0a78';
-            // other.style.backgroundColor = '';
-            // other.style.color = '#495057';
+            other.style.backgroundColor = '';
+            other.style.color = '#495057';
 
             // 色を設定
             if (color === 'blue') {
@@ -159,11 +160,11 @@
                 female.style.backgroundColor = '#ff0a78';
                 female.style.color = '#fff';
                 document.getElementById('femaleHidden').value = 'female';
-            } //else if (color === 'gray') {
-            //     other.style.backgroundColor = '#495057';
-            //     other.style.color = '#fff';
-            //     document.getElementById('otherHidden').value = 'other';
-            // }
+            } else if (color === 'gray') {
+                other.style.backgroundColor = '#495057';
+                other.style.color = '#fff';
+                document.getElementById('otherHidden').value = 'other';
+            }
         }
 
         function checkFormCompletion() {
